# adb-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md  claude_desktop_config.json  cline_mcp_settings.json  opencode.json
src/adb_mcp/: __init__.py  __main__.py  config.py  device.py  errors.py  server.py
src/adb_mcp/tools/: __init__.py  apps.py  diag.py  input.py  screen.py  settings.py
src/adb_mcp/ui/: ocr.py  selector.py  som.py  tree.py
src/adb_mcp/util/: cache.py  screenshot.py
tests/: test_selector.py  test_som.py  test_tree_parse.py
tests/integration/: test_live_device.py
